samples/_failures_safe/1761226379_e2936e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfe15ba5.c: In function ‘main’:
./samples/SAFE/__tmp_cfe15ba5.c:143:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  143 |     char input
      |     ^~~~
./samples/SAFE/__tmp_cfe15ba5.c:143:5: error: expected declaration or statement at end of input
